# BmstuOsLab

./: .gitmodules  CMakeLists.txt
memory_functions/: CMakeLists.txt
memory_functions/include/: memory_functions.hpp
memory_functions/src/: memory_functions.cpp
peterson_mutex/: CMakeLists.txt
peterson_mutex/include/: peterson_mutex.hpp
peterson_mutex/src/: peterson_mutex.cpp
test/: CMakeLists.txt
test/include/: tools.hpp
test/src/: base.cpp  memory_functions.cpp  peterson_mutex.cpp  transaction_memory.cpp
transaction_memory/: CMakeLists.txt
transaction_memory/include/: transaction_memory.hpp
transaction_memory/src/: transaction_memory.cpp
